--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'joda-time:joda-time:2.9.3'
-    implementation 'com.ldoublem.loadingview:loadingviewlib:1.0'
     implementation 'com.google.android.gms:play-services-ads:22.6.0'
     implementation 'com.google.firebase:firebase-database:20.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'net.steamcrafted:materialiconlib:1.1.5'
+    implementation 'com.github.code-mc:material-icon-lib:1.1.5'
     implementation 'com.github.naseemali925:ShapedNavigationView:1.0.0'
     implementation 'com.romainpiel.shimmer:library:1.4.0@aar'
     implementation 'com.github.mjn1369:prettydialog:1.0.4'
@@ -52,14 +51,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "com.airbnb.android:lottie:5.2.0"
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
-    implementation 'com.jakewharton:butterknife:10.2.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    implementation 'com.duolingo.open:rtl-viewpager:2.0.0'
+    //implementation 'com.duolingo.open:rtl-viewpager:2.0.0'
     implementation 'com.github.jeancsanchez:JcPlayer:2.7.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
     implementation 'com.google.firebase:firebase-messaging:23.4.1'
