--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 
 android {
-    compileSdk 34
+    compileSdk 35
     defaultConfig {
         applicationId "com.appwalied.quran"
         minSdkVersion 21
-        targetSdkVersion 34
+        targetSdkVersion 35
         versionCode 41
         versionName "4.0"
         multiDexEnabled true
@@ -20,55 +20,49 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
+        resources {
+            excludes += ['META-INF/DEPENDENCIES']
+        }
     }
+
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+    namespace 'com.appwalied.quran'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'joda-time:joda-time:2.9.3'
-    implementation 'com.google.android.gms:play-services-ads:22.6.0'
-    implementation 'com.google.firebase:firebase-database:20.3.1'
+    implementation 'com.google.android.gms:play-services-ads:23.6.0'
+    implementation 'com.google.firebase:firebase-database:21.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'com.github.code-mc:material-icon-lib:1.1.5'
     implementation 'com.github.naseemali925:ShapedNavigationView:1.0.0'
     implementation 'com.romainpiel.shimmer:library:1.4.0@aar'
     implementation 'com.github.mjn1369:prettydialog:1.0.4'
     implementation 'com.github.guy-4444:SmartRateUsDialog-Android:1.00.08'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "com.airbnb.android:lottie:5.2.0"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    //implementation 'com.duolingo.open:rtl-viewpager:2.0.0'
     implementation 'com.github.jeancsanchez:JcPlayer:2.7.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
-    implementation 'com.google.firebase:firebase-messaging:23.4.1'
+    implementation 'com.google.firebase:firebase-messaging:24.1.0'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
-
-    // Update 20-12-2021
     implementation 'com.github.TecOrb-Developers:SmartAlertDialog:v1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'androidx.work:work-runtime:2.9.0'
-
-    // Update 31-5-2022
-    implementation 'com.google.firebase:firebase-crashlytics:18.6.2'
-    implementation 'com.google.firebase:firebase-analytics:21.5.1'
+    implementation 'androidx.work:work-runtime:2.10.0'
+    implementation 'com.google.firebase:firebase-crashlytics:19.4.0'
+    implementation 'com.google.firebase:firebase-analytics:22.2.0'
     implementation 'xyz.danoz:recyclerviewfastscroller:0.1.3'
 }
