Edit quran reading

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         <!-- Quran & Islamic Features -->
         <activity android:name=".quran.qouran_learning.QouranLearningActivity" android:exported="false" />
         <activity android:name=".quran.qouran_learning.LearningActivity" android:exported="false" />
-        <activity android:name=".quranread.newquran.QuranRead" android:exported="false" />
+        <activity android:name=".quran.quran_reading.QuranRead" android:exported="false" />
         <activity android:name=".notifications_messages.NotificationsMessagesActivity" android:exported="true">
             <intent-filter>
                 <action android:name="MainActivity" />
