--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@
 buildscript {
     repositories {
         google()
-        maven { url "https://maven.google.com" }
+        mavenCentral()
         maven { url 'https://jitpack.io' }
-        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.8.0'
@@ -17,9 +19,11 @@ buildscript {
 allprojects {
     repositories {
         google()
-        maven { url "https://maven.google.com" }
+        mavenCentral()
         maven { url 'https://jitpack.io' }
-        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
