--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
     implementation 'com.github.TecOrb-Developers:SmartAlertDialog:v1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.work:work-runtime:2.10.0'
-    implementation 'com.google.firebase:firebase-crashlytics:19.4.0'
-    implementation 'com.google.firebase:firebase-analytics:22.2.0'
+    implementation 'com.google.firebase:firebase-crashlytics:19.4.1'
+    implementation 'com.google.firebase:firebase-analytics:22.3.0'
     implementation 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+    implementation 'androidx.window:window:1.3.0'
 }
