--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 
 android {
-    compileSdk 35
+    compileSdk = 36
     defaultConfig {
         applicationId "com.appwalied.quran"
-        minSdkVersion 21
-        targetSdkVersion 35
-        versionCode 44
-        versionName "5.2"
+        minSdkVersion 23
+        targetSdkVersion 36
+        versionCode 45
+        versionName "5.3"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -39,12 +39,12 @@ android {
 
 dependencies {
     //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
-    implementation 'joda-time:joda-time:2.9.3'
-    implementation 'com.google.android.gms:play-services-ads:23.6.0'
-    implementation 'com.google.firebase:firebase-database:21.0.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.google.android.material:material:1.13.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'joda-time:joda-time:2.14.0'
+    implementation 'com.google.android.gms:play-services-ads:24.9.0'
+    implementation 'com.google.firebase:firebase-database:22.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'com.github.code-mc:material-icon-lib:1.1.5'
@@ -52,21 +52,21 @@ dependencies {
     implementation 'com.romainpiel.shimmer:library:1.4.0@aar'
     implementation 'com.github.mjn1369:prettydialog:1.0.4'
     implementation 'com.github.guy-4444:SmartRateUsDialog-Android:1.00.08'
-    implementation "com.airbnb.android:lottie:5.2.0"
+    implementation "com.airbnb.android:lottie:6.7.1"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'com.squareup.retrofit2:retrofit:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:3.0.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.github.jeancsanchez:JcPlayer:2.7.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
-    implementation 'com.google.firebase:firebase-messaging:24.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.3.2'
+    implementation 'com.google.firebase:firebase-messaging:25.0.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     implementation 'com.github.TecOrb-Developers:SmartAlertDialog:v1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'androidx.work:work-runtime:2.10.0'
-    implementation 'com.google.firebase:firebase-crashlytics:19.4.1'
-    implementation 'com.google.firebase:firebase-analytics:22.3.0'
+    implementation 'androidx.work:work-runtime:2.11.1'
+    implementation 'com.google.firebase:firebase-crashlytics:20.0.4'
+    implementation 'com.google.firebase:firebase-analytics:23.0.0'
     implementation 'xyz.danoz:recyclerviewfastscroller:0.1.3'
-    implementation 'androidx.window:window:1.3.0'
+    implementation 'androidx.window:window:1.5.1'
 }
